--- a/.k8s/.environment/development.configmap.yml
+++ b/.k8s/.environment/development.configmap.yml
@@ -5,3 +5,5 @@ metadata:
 data:
   seed-initial-data: "True"
   event-bus-user: rabbitmquser
+  event-bus-host: event-bus
+  notifications-allowed-origins: http://localhost
