configuring related objects in a single file

--- a/.k8s/.environment/development.yml
+++ b/.k8s/.environment/development.yml
@@ -1,4 +1,16 @@
 apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: environment-settings
+data:
+  seed-initial-data: "True"
+  event-bus-user: rabbitmquser
+  event-bus-host: event-bus
+  notifications-allowed-origins: http://localhost
+
+---
+
+apiVersion: v1
 kind: Secret
 metadata:
   name: environment-secrets
