--- a/.k8s/databases/identity-database.yml
+++ b/.k8s/databases/identity-database.yml
@@ -1,3 +1,30 @@
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: identity-database-data
+spec:
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: identity-database
+spec:
+  clusterIP: None
+  ports:
+  - port: 1433
+    targetPort: 1433
+  selector:
+    database: identity
+
+---
+
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
