--- a/.k8s/databases/statistics-database.yml
+++ b/.k8s/databases/statistics-database.yml
@@ -1,21 +1,48 @@
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: statistics-database-data
+spec:
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: statistics-database
+spec:
+  clusterIP: None
+  ports:
+  - port: 1433
+    targetPort: 1433
+  selector:
+    database: statistics
+
+---
+
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: dealers-database
+  name: statistics-database
 spec:
-  serviceName: dealers-database
+  serviceName: statistics-database
   selector:
     matchLabels:
-      database: dealers
+      database: statistics
   template:
     metadata:
       labels:
-        database: dealers
+        database: statistics
         system: database
     spec:
       terminationGracePeriodSeconds: 60
       containers:
-      - name: dealers-database
+      - name: statistics-database
         image: mcr.microsoft.com/mssql/server:2019-latest
         imagePullPolicy: IfNotPresent
         ports:
@@ -31,11 +58,11 @@ spec:
             valueFrom:
               secretKeyRef:
                 name: environment-secrets
-                key: dealers-database-sa-password
+                key: statistics-database-sa-password
         volumeMounts:
-          - name: dealers-database-data
+          - name: statistics-database-data
             mountPath: /var/opt/mssql
       volumes:
-      - name: dealers-database-data
+      - name: statistics-database-data
         persistentVolumeClaim:
-          claimName: dealers-database-data
+          claimName: statistics-database-data
