--- a/.k8s/event-bus/event-bus.yml
+++ b/.k8s/event-bus/event-bus.yml
@@ -1,3 +1,46 @@
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: event-bus-data
+spec:
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: "3Gi"
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: event-bus
+spec:
+  clusterIP: None
+  ports:
+   - port: 5672
+     targetPort: 5672
+  selector:
+    event-bus: rabbitmq
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: event-bus-client
+spec:
+  type: LoadBalancer
+  # type: NodePort
+  ports:
+   - port: 15672
+     targetPort: 15672
+    #  nodePort: 30007
+  selector:
+    event-bus: rabbitmq
+
+---
+
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
