--- a/.k8s/web-services/notifications-service.yml
+++ b/.k8s/web-services/notifications-service.yml
@@ -1,3 +1,30 @@
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: notifications-service-data
+spec:
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Mi
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: notifications-service
+spec:
+  type: LoadBalancer
+  ports:
+  - port: 5004
+    targetPort: 80
+  selector:
+    web-service: notifications
+
+---
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
