--- a/.k8s/.environment/development.yml
+++ b/.k8s/.environment/development.yml
@@ -7,6 +7,14 @@ data:
   event-bus-user: rabbitmquser
   event-bus-host: event-bus
   notifications-allowed-origins: http://localhost
+  admin-identity-endpoint: http://identity-service:5001
+  admin-dealers-endpoint: http://dealers-service:5002
+  admin-statistics-endpoint: http://statistics-service:5003
+  watchdog-identity-health: http://identity-service:5001/health
+  watchdog-dealers-health: http://dealers-service:5002/health
+  watchdog-statistics-health: http://statistics-service:5003/health
+  watchdog-notifications-health: http://notifications-service:5004/health
+  watchdog-admin-health: http://admin-client:5000/health
 
 ---
 
