--- a/.k8s/objects/clients/watchdog-client.yml
+++ b/.k8s/objects/clients/watchdog-client.yml
@@ -29,7 +29,7 @@ spec:
       containers:
       - name: watchdog-client
         image: pesho1/carrentalsystem-watchdog-service
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
         resources:
